--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -45,6 +45,20 @@
             	</p>
 			</div>
         </div>
+        <hr>
+        <div id="share_box" class="align-center">
+			    <p>share this Article on: </p>
+			    <%= link_to "http://twitter.com/home?status=check out this article by @CodeKreig - #{@article.title} #{article_url(@article)}", target: '_blank' do%>
+			    <i class="fa fa-twitter fa-1x"></i>
+			    <% end %>
+			   <%= link_to "http://facebook.com/sharer.php?u= #{article_url(@article)}", target: '_blank' do%>
+			        <i class="fa fa-facebook fa-1x"> </i>
+			   <% end %>
+			   <%= link_to "http://plus.google.com/share?url=check out this article by @CodeKreig - #{@article.title} #{article_url(@article)}", target: '_blank' do%>
+			        <i class="fa fa-google-plus fa-1x"> </i>
+			   <% end %> 
+			</div>
+		<hr>
     </div>
 </section>
 
