--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -37,7 +37,7 @@
                     <li><%= nav_link "Projects", projects_path %></li>
                     <li><%= nav_link "Blog", articles_path %></li>
                     <li><%= nav_link "The Company", company_path %></li>
-                    <li><%= nav_link "WebHosting", "http://hosting.codekrieg,com"%></li>
+                    <li><%= nav_link "WebHosting", "http://hosting.codekrieg.com"%></li>
                     <li><%= nav_link "Request A Quote", new_contact_path %></li>
                     <% if logged_in?%>
                         <li><%= link_to "Logout", logout_path, method: :delete %></li>
