--- a/app/views/articles/_forms.html.erb
+++ b/app/views/articles/_forms.html.erb
@@ -25,7 +25,7 @@
           <%= f.label :content %>
         </div>
         <div class="col-sm-8" id="bootsy-image">
-          <%= f.bootsy_area :content, class: "form-control", placeholder: "Body of article" %>
+          <%= f.bootsy_area (:content, class: "form-control").html_safe, placeholder: "Body of article" %>
         </div>
       </div>
       <div class="form-group">
